# WinCycle

./: .gitignore  go.mod
lib/: CMakeLists.txt  build.ps1  build_and_run.ps1  lib.c  lib.h
